RPM-209: final ergänzt. Testdaten für GraphenDB eingefügt (CreateAndInitialiteDB).